creating perv and next song functionality

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<title>JUKEBOX</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="main.js"></script>
+	<script src="controllers.js"></script>
 </head>
 <body>
 	<div id="prev">Prev</div>
 	<div id="play">Play</div>
 	<div id="pause">Pause</div>
-	<div id="stop">Stop</div>
 	<div id="next">Next</div>
 	<div id="rand">Shuffle</div>
 
