--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="main.js"></script>
 	<script src="controllers.js"></script>
+	<script src="form.js"></script>
 </head>
 <body>
+	<div id="current_song_display">
+		<span id="song_title"></span>
+		<span id="song_artist"></span>
+		<span id="song_length"></span>
+	</div>
+	
 	<div id="prev">Prev</div>
 	<div id="play">Play</div>
 	<div id="pause">Pause</div>
+	<div id="stop">Stop</div>
 	<div id="next">Next</div>
 	<div id="rand">Shuffle</div>
 
 	<div id="song-form">
 		<form id="new_song">
-			<input type="text" name="title" placeholder="Song title">
-			<input type="text" name="artist" placeholder="Artist">
-			<input type="text" name="url" placeholder="URL">
+			<input id="new_title" type="text" name="title" placeholder="Song title">
+			<input id="new_artist" type="text" name="artist" placeholder="Artist">
+			<input id="new_url" type="text" name="url" placeholder="URL">
 			<input type="submit" value="Add Song">
 		</form>
 	</div>
