adding checkbox to the submit song form to push the song to the top of the songs array

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<span id="song_artist"></span>
 		<span id="song_length"></span>
 	</div>
-	
+
 	<div id="prev">Prev</div>
 	<div id="play">Play</div>
 	<div id="pause">Pause</div>
@@ -26,6 +26,7 @@
 			<input id="new_title" type="text" name="title" placeholder="Song title">
 			<input id="new_artist" type="text" name="artist" placeholder="Artist">
 			<input id="new_url" type="text" name="url" placeholder="URL">
+			<input id="play_next" type="checkbox" name="play_next">Play Next</input>
 			<input type="submit" value="Add Song">
 		</form>
 	</div>
