--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html>
 <head>
 	<title>JUKEBOX</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-	<script src="main.js"></script>
-	<script src="controllers.js"></script>
-	<script src="form.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script src="js/main.js"></script>
+	<script src="js/controllers.js"></script>
+	<script src="js/form.js"></script>
 </head>
 <body>
 	<div id="current_song_display">
 		<span id="song_title"></span>
 		<span id="song_artist"></span>
 		<span id="song_length"></span>
+	</div>
+
+	<div id="player">
+		
 	</div>
 
 	<div id="prev">Prev</div>
