adding toggle between the play and pause buttons

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 	</div>
 
 	<div id="player">
-		
+		<span id="prev" class="glyphicon glyphicon-backward"></span>
+		<span id="play" class="glyphicon glyphicon-play"></span>
+		<span id="pause" class="glyphicon glyphicon-pause"></span>
+		<span id="next" class="glyphicon glyphicon-forward"></span>
 	</div>
 
-	<div id="prev">Prev</div>
-	<div id="play">Play</div>
+	<!-- <div id="prev">Prev</div> -->
+	<!-- <div id="play">Play</div> -->
 	<div id="pause">Pause</div>
-	<div id="stop">Stop</div>
-	<div id="next">Next</div>
+	<!-- <div id="next">Next</div> -->
 	<div id="rand">Shuffle</div>
 
 	<div id="song-form">
