converting the stylesheet to scss

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>JUKEBOX</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="js/main.js"></script>
@@ -32,14 +32,30 @@
 		</div>
 	</div>
 
-	<div id="song-form">
-		<form id="new_song">
-			<input id="new_title" type="text" name="title" placeholder="Song title">
-			<input id="new_artist" type="text" name="artist" placeholder="Artist">
-			<input id="new_url" type="text" name="url" placeholder="URL">
-			<input id="play_next" type="checkbox" name="play_next">Play Next</input>
-			<input type="submit" value="Add Song">
-		</form>
+	<div id="wrapper">
+		<ul class="nav nav-tabs" role="tablist" id="navbar">
+	    <li id="pl_tab" role="presentation" class="active"><a href="#playlist" aria-controls="playlist" role="tab" data-toggle="tab">Playlist</a></li>
+	    <li id="add_tab" role="presentation"><a href="#song_form" aria-controls="song_form" role="tab" data-toggle="tab">Add Song</a></li>
+	  </ul>
+	  <div class="tab-content">
+	  	<div role="tabpanel" class="tab-pane fade in active" id="playlist">
+	  		<div class="playlist_song" id="goaway">
+	  			<h3 id="pl_title"></h3>
+	  			<p id="pl_artist"></p>
+			    <span class="glyphicon glyphicon-option-vertical"></span>
+	  		</div>
+	  	</div>
+			<div role="tabpanel" class="tab-pane fade" id="song_form">
+				<form id="new_song">
+					<input id="new_title" type="text" name="title" placeholder="Song title">
+					<input id="new_artist" type="text" name="artist" placeholder="Artist">
+					<input id="new_url" type="text" name="url" placeholder="URL">
+					<input id="play_next" type="checkbox" name="play_next">Play Next</input>
+					<input type="submit" value="Add Song">
+				</form>
+			</div>
+		</div>
 	</div>
+
 </body>
 </html>
